# QT_BlockOne

./: Black_One_Task_One_QT.pro  CMakeLists.txt  main.cpp
TaskFourDlg/: TaskFourDialog.cpp  TaskFourDialog.hpp  TaskFourDlg.cpp  TaskFourDlg.hpp  taskfourdialog.ui
TaskOneDlg/: TaskOneDlg.cpp  TaskOneDlg.hpp  TaskOneLogic.cpp  TaskOneLogic.hpp  taskonedlg.ui
TaskThreeDlg/: TaskThreeDlg.cpp  TaskThreeDlg.hpp  taskthreedlg.ui
TaskTwoDlg/: TaskTwoDlg.cpp  TaskTwoDlg.hpp  TaskTwoLogic.cpp  TaskTwoLogic.hpp  tasktwodialog.ui
mainwindow/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui
